# resume-agent

./: .coverage  .gitignore  .patina.yaml  .tmp_jobdesc.txt  01_코칭_프롬프트..txt  02_자기소개서_프롬프트..txt  03_면접_프롬프트..txt  ARCHITECTURE.md  CODEX_CLI_ENHANCED_DESIGN.md  CODEX_USAGE.md  COMPREHENSIVE_ANALYSIS.md  DIAGNOSTIC_TOP001.md  IMPROVEMENT_PROPOSALS.md  KB_AND_STATE_SPEC.md  README.md  SEED.yaml  TOP001_EVALUATION.md  VALIDATION_PROMPT.md  config.yaml  dual_handoff_output.md  implementation_plan.md  md2pdf.py  output.xml  pyproject.toml  self_intro.xml  self_intro_edited.xml  기업조사-프롬프트.txt  자기소개서_원동아.docx  자기소개서_원동아_농축협.docx
docs/: multi-cli-compatibility.md
plans/: wizard_feature_plan.md
prompts/: coach.md  interview.md  writer.md
scripts/: migrate_embeddings.py
tests/: conftest.py  test_80p_push.py  test_ab_testing.py  test_auditor.py  test_cli_commands.py  test_cli_phase1.py  test_cli_tool_manager.py  test_company_profiler.py  test_config.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_final.py  test_coverage_final_push.py  test_domain.py  test_editor_coverage.py  test_enhancements.py  test_executor_cli.py  test_executor_coverage.py  test_experience_analyzer.py  test_final_push.py  test_interactive_coverage.py  test_interactive_full.py  test_interactive_phase2.py  test_interactive_phase3.py  test_interactive_pure.py  test_interactive_resume_coverage.py  test_interview_coach.py  test_interview_engine_coverage.py  test_miner_coverage.py  test_outcome_tracker.py  test_parsing_coverage.py  (+21 more)
(+4691 files in other folders)
