[project]
name = "resume-agent"
version = "0.1.0"
description = "Codex CLI-driven resume and application drafting pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "rich",
    "python-docx",
    "pypdf",
    "tiktoken",
    "scikit-learn",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2",
    "kiwipiepy>=0.16",
]

[project.scripts]
resume-agent = "resume_agent.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
